# orbit-knowledge-graph

./: .dockerignore  .env.example  .gitattributes  .gitdiffignore  .gitignore  .gitlab-ci.yml  .gkg-dev.conf.example  .markdownlint-cli2.yaml  .releaserc.json  .tilt-secrets.example  .tiltignore  .vale.ini  AGENTS.md  AI_USEFULNESS_REPORT.md  BENCH_NOTES.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  INTEGRATION_PLAN.md  MR_DESCRIPTION.md  PLAN.md  PRD.md  PRIORITY_FIXES.md  README.md  Tiltfile  Untitled  VALIDATION_REPORT.md  argo_translation.yml  caproni.yaml  code-indexing-benchmark.yaml  concerns.md  deny.toml  gkg-benchmark-config.toml  go.mod  improvements_large.md  install.ps1  (+20 more)
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: content.rs  local_converter.rs  local_pipeline.rs  main.rs  sessions.rs  workspace.rs
crates/clickhouse-client/: Cargo.toml
crates/clickhouse-client/src/: arrow_client.rs  circuit_breaking.rs  configuration.rs  enrichment.rs  error.rs  extract.rs  lib.rs  profiler.rs  profiling.rs  stats.rs  uri_guard.rs  uri_len.rs
crates/code-graph/: AGENTS.md  Cargo.toml
crates/code-graph/config/: Cargo.toml
crates/code-graph/examples/: basic_usage.rs
crates/code-graph/linker/: Cargo.toml
crates/code-graph/parser/: Cargo.toml
crates/code-graph/src/: index.rs  indexer.rs  lib.rs  parse.rs  stats.rs  tests.rs  utils.rs
crates/code-graph/treesitter-visit/: Cargo.toml
crates/code-graph/types/: Cargo.toml
crates/code-indexer/: Cargo.toml
crates/code-indexer/src/: graph.rs  indexer.rs  lib.rs  stats.rs  tests.rs
crates/datalake-generator/: Cargo.toml  README.md  datalake-generator.yaml
crates/datalake-generator/src/: clickhouse.rs  config.rs  continuous.rs  dispatch.rs  lib.rs  report.rs  state.rs
crates/duckdb-client/: Cargo.toml
crates/duckdb-client/src/: arrow_compat.rs  client.rs  converter.rs  error.rs  lib.rs  params.rs  schema.rs
crates/etl-engine/: AGENTS.md  Cargo.toml  README.md
crates/etl-engine/src/: configuration.rs  constants.rs  destination.rs  engine.rs  entities.rs  lib.rs  message_broker.rs  metrics.rs  module.rs  types.rs  worker_pool.rs
crates/etl-engine/tests/: clickhouse.rs  engine.rs  nats.rs
crates/fuzz/: .gitignore  Cargo.toml  README.md
crates/fuzz/src/: generators.rs  lib.rs
crates/gitaly-client/: Cargo.toml  README.md  build.rs
crates/gitaly-client/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  traits.rs
crates/gitaly-client/tests/: integration.rs
crates/gitlab-client/: Cargo.toml
crates/gitlab-client/src/: circuit_breaking.rs  client.rs  config.rs  error.rs  lib.rs  types.rs
crates/gkg-analytics/: Cargo.toml  build.rs
crates/gkg-analytics/src/: analytics.rs  billing_event_emitter.rs  config.rs  context.rs  event.rs  events.rs  lib.rs  testkit.rs  tracker.rs
crates/gkg-billing/: Cargo.toml
crates/gkg-billing/src/: constants.rs  inputs.rs  lib.rs  metrics.rs  observer.rs  tracker.rs
crates/gkg-billing/tests/: delivery_failure_smoke.rs  delivery_smoke.rs
crates/gkg-query/: Cargo.toml
crates/gkg-query/src/: main.rs
crates/gkg-server/: Cargo.toml  build.rs
crates/gkg-server-config/: Cargo.toml
crates/gkg-server-config/src/: analytics.rs  app.rs  billing.rs  circuit_breaker.rs  clickhouse.rs  deployment.rs  engine.rs  env.rs  features.rs  gitlab.rs  graph_status.rs  grpc.rs  health_check.rs  indexing_progress.rs  lib.rs  metrics.rs  nats.rs  query.rs  rate_limit.rs  resources.rs  schema.rs  secret_file_source.rs  tls.rs
crates/gkg-server/proto/: gkg.proto
crates/gkg-server/schemas/: query_response.json
crates/gkg-server/src/: arrow.rs  billing_adapter.rs  cluster_health.rs  config.rs  constants.rs  content.rs  error.rs  health_check.rs  lib.rs  main.rs  metrics.rs  migrate.rs  rate_limit.rs  schema_watcher.rs  secret_file_source.rs  shutdown.rs  tls.rs  version.rs
crates/gkg-server/tests/: code_indexing_integration.rs  dispatcher_integration.rs  global_integration.rs  graph_formatter_integration.rs  health_integration.rs  hydration_integration.rs  labkit_integration.rs  namespace_integration.rs  redaction_integration.rs  sdlc_integration.rs  user_integration.rs
crates/health-check/: Cargo.toml
crates/health-check/src/: checker.rs  clickhouse.rs  config.rs  error.rs  k8s.rs  lib.rs  nats.rs  server.rs  types.rs
crates/indexer/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/indexer/examples/: bench_coalesce.rs
crates/indexer/src/: campaign.rs  checkpoint.rs  circuit_breaker.rs  config.rs  configuration.rs  dead_letter.rs  destination.rs  lib.rs  (+16 more)
crates/integration-testkit/: Cargo.toml  README.md
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests-codegraph/: Cargo.toml  README.md
crates/kdl-testkit/: Cargo.toml
crates/labkit-rs/: Cargo.toml
crates/llqm/: Cargo.toml  README.md
crates/mailbox/: Cargo.toml  README.md
crates/migration-framework/: Cargo.toml
crates/migrations/: Cargo.toml
crates/named-queries/: Cargo.toml
crates/nats-client/: Cargo.toml
evals/: .env.example  .gitignore  README.md  eval.yaml  mise.toml  pyproject.toml  query.json  query_neighbors.sh
evals/agents/: glab.md  orbit.md
evals/container/: Dockerfile  entrypoint.sh  mise.toml  opencode.json
evals/harness/: cli.py  config.py  db.py  db_server.py  log.py  opencode.py  report.py  runner.py  server.py  session.py  store.py
evals/opencode_sdk/: GENERATED.md  pyproject.toml
evals/scripts/: sync-opencode-spec.sh
evals/tasks/: co-change-coupling.yaml  cross-project-collaborators.yaml  gatekeeper-analysis.yaml  god-model-archaeology.yaml  issue-to-deployment.yaml  label-hotspots.yaml  most-contentious-features.yaml  mr-count-by-project.yaml  mr-neighbors.yaml  mr-review-chain.yaml  path-between-users.yaml  pipeline-failure-authors.yaml  pipeline-stage-bottleneck.yaml  release-velocity.yaml  reviewer-workload.yaml  schema.json  search-user.yaml  security-scan-coverage.yaml  user-open-mrs.yaml  vulnerability-blast-radius.yaml
evals/tests/: test_smoke.py
evals/tools/: orbit_query.py
(+4039 files in other folders)
