[workspace]
resolver = "2"
members = [
  "crates/treesitter-visit",
  "crates/code-parser",
  "crates/code-indexer",
  "crates/labkit-rs",
  "crates/clickhouse-client",
  "crates/etl-engine",
  "crates/query-engine",
  "crates/cli",
  "crates/gitaly-client",
  "crates/gkg-server",
  "crates/ontology",
  "crates/simulator",
  "crates/health-check",
  "crates/siphon-proto",
]

[workspace.dependencies]
arrow = "57.2.0"
datafusion = { version = "52.1.0", default-features = false, features = ["sql", "nested_expressions"] }
ulid = "1.1"
clap = { version = "4.5.54", features = ["derive", "env"] }
dunce = "1.0.5"
async-trait = "0.1.89"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
internment = "0.8.6"
mimalloc = "0.1.48"
once_cell = "1.21.3"
parking_lot = "0.12.5"
pastey = "0.2.1"
rust-lapper = "1.2.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
smallvec = "1.15.1"
tempfile = "3.24.0"

# Indexer dependencies
anyhow = "1.0.100"
log = "0.4.29"
num_cpus = "1.17.0"
parquet = { version = "57.2.0", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
tokio = { version = "1.49.0", features = ["full"] }
strum = { version = "0.27.2", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-util = "0.7.18"
tokio-rayon = "2.1.0"
ignore = "0.4.25"
rayon = "1.11.0"
miette = { version = "7.6.0", features = ["fancy"] }
walkdir = "2.5.0"
criterion = { version = "0.8.1", features = ["html_reports"] }
tracing-test = "0.2.5"

# Parser-core
parser-core = { path = "crates/code-parser" }
clickhouse-client = { path = "crates/clickhouse-client" }
gitalisk-core = { git = "https://gitlab.com/gitlab-org/rust/gitalisk.git", tag = "v0.7.0" }
thiserror = "2.0.18"
tokio-stream = "0.1.18"
toml = "0.9.8"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4"] }
async-nats = "0.46.0"
arrow-ipc = "57.2.0"
clickhouse = { version = "0.14", features = ["inserter"] }
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["nats", "clickhouse"] }
serial_test = "3.3.1"

# Query engine dependencies
jsonschema = "0.40.0"

# Gitaly client dependencies
regex = "1.12.2"
hex = "0.4.3"
hmac = "0.12.1"
hyper-util = { version = "0.1", features = ["client", "tokio"] }
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
protoc-bin-vendored = "3.2.0"
sha2 = "0.10.9"
tar = "0.4.44"
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tower = "0.5.3"
base64 = "0.22.1"

# Server dependencies
axum = { version = "0.8.8", features = ["macros"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tower-http = { version = "0.6.8", features = ["trace"] }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path", "debug-embed"] }

# Health check dependencies
kube = { version = "0.99", features = ["client", "runtime"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
health-check = { path = "crates/health-check" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
