[workspace.package]
version = "0.1.0"

[workspace]
resolver = "3"
members = [
  "crates/circuit-breaker",
  "crates/code-graph",
  "crates/code-graph/treesitter-visit",
  "crates/clickhouse-client",
  "crates/indexer",
  "crates/query-engine",
  "crates/query-engine/compiler",
  "crates/query-engine/types",
  "crates/query-engine/pipeline",
  "crates/query-engine/shared",
  "crates/query-engine/formatters",
  "crates/query-engine/profiler",
  "crates/query-engine/compiler-pipeline-macros",
  "crates/orbit-local",

  "crates/gkg-analytics",
  "crates/gkg-billing",
  "crates/gkg-observability",
  "crates/gkg-server-config",
  "crates/gkg-server",
  "crates/ontology",

  "crates/health-check",
  "crates/gitaly-protos",
  "crates/gitlab-client",
  "crates/xtask",
  "crates/integration-testkit",
  "crates/integration-tests-codegraph",
  "crates/named-queries",
  "crates/nats-client",
  "crates/utils",
  "crates/integration-tests",
  "crates/duckdb-client",
  "crates/fuzz",
]

[workspace.dependencies]
gkg-observability = { path = "crates/gkg-observability" }
labkit = { git = "https://gitlab.com/gitlab-org/rust/labkit-rs.git", rev = "1e235f49" }
labkit-events = { git = "https://gitlab.com/gitlab-org/rust/labkit-rs.git", rev = "1e235f49" }
arrow = "58.0.0"
bumpalo = { version = "3.20.2", features = ["collections"] }
cargo-platform = "0.3.3"
cpu-time = "1.0.0"
cargo-util-schemas = "0.14.0"
cargo_metadata = "0.23.1"
enum-as-inner = "0.7.0"
either = "1.15.0"
datafusion = { version = "53.0.0", default-features = false, features = ["sql", "nested_expressions"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
comrak = { version = "0.53.0", default-features = false }
dirs = "6"
dunce = "1.0.5"
async-trait = "0.1.89"
bytes = "1.12.1"
flate2 = "1.1.9"
chrono = { version = "0.4.43", features = ["serde"] }
croner = "3.0.1"
futures = "0.3.31"
mimalloc = { version = "0.1.48", default-features = false }
parking_lot = "0.12.5"
petgraph = "0.8.3"
globset = "0.4"
rust-lapper = "1.2.0"
rustc-hash = "2.1.1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
smallvec = "1.15.1"
stacker = "0.1.23"
tempfile = "3.24.0"

# Indexer dependencies
anyhow = "1.0.100"
config = { version = "0.15", default-features = false, features = ["yaml"] }
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
tokio = { version = "1.49.0", features = ["full"] }
strum = { version = "0.28.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-util = { version = "0.7.18", features = ["io-util"] }
ignore = "0.4.25"
rayon = "1.11.0"
walkdir = "2.5.0"
circuit-breaker = { path = "crates/circuit-breaker" }
clickhouse-client = { path = "crates/clickhouse-client" }
nats-client = { path = "crates/nats-client" }
duckdb = { version = "1.10501.0", features = ["vtab-arrow", "appender-arrow"] }
gitalisk-core = { git = "https://gitlab.com/gitlab-org/rust/gitalisk.git", tag = "v0.8.0" }
siphon-proto = { git = "https://gitlab.com/gitlab-org/analytics-section/siphon.git", tag = "0.0.103-beta" }
thiserror = "2.0.18"
tokio-stream = "0.1.18"
toml = "1.0.0"
toon-format = { version = "0.5.0", default-features = false }
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
async-nats = { version = "0.49.0", features = ["server_2_11"] }
arrow-ipc = "58.0.0"
clickhouse = { version = "0.15", features = ["inserter", "rustls-tls-aws-lc", "rustls-tls-native-roots"] }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["nats"] }

# Query engine dependencies
indexmap = "2"
jsonschema = "0.44.0"
const_format = "0.2.35"
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

# Iglu schema codegen (build-time only; consumed by gkg-analytics/build.rs)
prettyplease = "0.2.37"
typify = "0.7.0"

# JS/TS ecosystem (v2 custom pipeline)
oxc = { git = "https://github.com/oxc-project/oxc", rev = "69b2dfc1810e6ad9d5508ae9a20bc773ba5aa18d", features = ["semantic", "ast_visit"] }
oxc_linter = { git = "https://github.com/oxc-project/oxc", rev = "69b2dfc1810e6ad9d5508ae9a20bc773ba5aa18d" }
oxc_resolver = "11.24.2"

# Simulator dependencies
rand = "0.10"
sqlformat = "0.5"
tabled = "0.21"
indicatif = "0.18"

# Codegraph integration tests dependencies
arrow_56 = { package = "arrow", version = "56" }
lance-graph = { version = "0.5.4", default-features = false }

rcgen = { version = "0.14.7", default-features = false, features = ["aws_lc_rs", "pem"] }
regex = "1.12.2"
ra_ap_hir = "0.0.342"
ra_ap_cfg = "0.0.342"
ra_ap_ide = "0.0.342"
ra_ap_ide_db = "0.0.342"
ra_ap_intern = "0.0.342"
ra_ap_load-cargo = "0.0.342"
ra_ap_paths = "0.0.342"
ra_ap_project_model = "0.0.342"
ra_ap_syntax = "0.0.342"
ra_ap_vfs = "0.0.342"
sqlparser = { version = "0.62.0", features = ["visitor"] }
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
protoc-bin-vendored = "3.2.0"
tar = "0.4.44"
tonic = { version = "0.14.2", features = ["tls-aws-lc"] }
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tower = "0.5.3"
triomphe = "0.1.15"
base64 = "0.22.1"
moka = { version = "0.12", features = ["future"] }
minijinja = "2.21.0"

# Server dependencies
axum = { version = "0.8.8", features = ["macros"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path", "debug-embed"] }
semver = { version = "1.0", features = ["serde"] }

# Formatter test dependencies
insta = { version = "1.40", features = ["yaml"] }
proptest = "1.5"

# Health check dependencies
kube = { version = "3.0", features = ["client", "runtime", "ws"] }
k8s-openapi = { version = "0.27", features = ["v1_31"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls-no-provider"] }
rustls = { version = "0.23.36", default-features = false, features = ["aws_lc_rs"] }
health-check = { path = "crates/health-check" }
gitlab-client = { path = "crates/gitlab-client" }

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
