[package]
name = "orbit"
version.workspace = true
edition = "2024"
build = "build.rs"

[[bin]]
name = "orbit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
mimalloc = { workspace = true }
arrow = { workspace = true }
async-trait = { workspace = true }
code-graph = { path = "../code-graph" }
duckdb-client = { path = "../duckdb-client" }
gkg-utils = { path = "../utils" }
ontology = { path = "../ontology" }
query-engine = { path = "../query-engine" }
gitalisk-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
