[package]
name = "clickhouse-client"
version.workspace = true
edition = "2024"
license = "LicenseRef-EE"

[dependencies]
arrow = { workspace = true }
arrow-ipc = { workspace = true }
bytes = { workspace = true }
clickhouse = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serial_test = { workspace = true }
