[package]
name = "clickhouse-client"
version.workspace = true
edition = "2024"
license = "LicenseRef-EE"

[features]
default = []
testkit = []

[dependencies]
circuit-breaker = { workspace = true }
gkg-server-config = { path = "../gkg-server-config" }
gkg-utils = { path = "../utils" }
arrow = { workspace = true }
arrow-ipc = { workspace = true, features = ["lz4"] }
bytes = { workspace = true }
clickhouse = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
