[package]
name = "code-graph"
version.workspace = true
edition = "2024"

[dependencies]
code-graph-config = { path = "config" }
code-graph-types = { path = "types" }
treesitter-visit = { path = "treesitter-visit" }
parser-core = { path = "parser" }
code-graph-linker = { path = "linker" }
ignore = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
smallvec = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
