[package]
name = "code-graph"
version.workspace = true
edition = "2024"
license = "MIT"

[features]
test-utils = []

[dependencies]
treesitter-visit = { path = "treesitter-visit", features = ["builtin-parser"] }
gkg-utils = { path = "../utils" }

# Common
anyhow = { workspace = true }
arrow = { workspace = true }
bumpalo = { workspace = true }
cargo-platform = { workspace = true }
cargo-util-schemas = { workspace = true }
cargo_metadata = { workspace = true }
crossbeam-channel = "0.5"
either = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
rust-lapper = { workspace = true }
rust-embed = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
smol_str = "0.3"
stacker = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
triomphe = { workspace = true }

# Rust-analyzer
ra_ap_hir = { workspace = true }
ra_ap_cfg = { workspace = true }
ra_ap_ide = { workspace = true }
ra_ap_ide_db = { workspace = true }
ra_ap_intern = { workspace = true }
ra_ap_load-cargo = { workspace = true }
ra_ap_paths = { workspace = true }
ra_ap_project_model = { workspace = true }
ra_ap_syntax = { workspace = true }
ra_ap_vfs = { workspace = true }

# OXC (JavaScript/TypeScript)
oxc = { workspace = true }
oxc_linter = { workspace = true }
oxc_resolver = { workspace = true }

[dev-dependencies]
gitalisk-core = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
criterion = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true
