[package]
name = "datalake-generator"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-EE"

[[bin]]
name = "datalake-generate"
path = "src/bin/generate.rs"

[dependencies]
anyhow.workspace = true
arrow.workspace = true
chrono.workspace = true
clap.workspace = true
flate2 = "1"
opentelemetry.workspace = true
rand = { version = "0.8", features = ["small_rng"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sysinfo = "0.38.1"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clickhouse-client = { path = "../clickhouse-client" }
ontology = { path = "../ontology" }
