[package]
name = "duckdb-client"
version.workspace = true
edition = "2024"
license = "LicenseRef-EE"

[dependencies]
duckdb = { workspace = true }
arrow = { workspace = true }
gkg-utils = { path = "../utils" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
