[package]
name = "gitlab-client"
version.workspace = true
edition = "2024"
license = "LicenseRef-EE"

[dependencies]
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
