[package]
name = "gitlab-client"
version.workspace = true
edition = "2024"
license = "LicenseRef-EE"

[dependencies]
circuit-breaker = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
gkg-server-config = { path = "../gkg-server-config" }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
